# NHKRobocon2024B_public

./: README.md
docs/: README.md  all_system.md  can_communication.md  robot1_mainboard.md  robot1_system.md  robot2_mainboard.md  robot2_system.md  udp_communication.md  yama_hex_device_controller.md
docs/node/: aruco_detector.md  htmd_manager.md  keyboard_driver.md  led_driver.md  realsense_node.md  robot1_core.md  robot1_driver.md  robot1_navi.md  robot2_core.md  robot2_driver.md  servo_driver.md
docs/uml/activity/: README.md  key_to_motion.pu
docs/uml/component/: R1_mainboard.pu  README.md  all_system_v1.pu  control_system_all.pu
docs/uml/sequence/: README.md
docs/uml/state/: README.md
docs/uml/usecase/: README.md  control_signals.pu  robot1_communication_detail.pu  robot1_communication_type.pu  robot1_pc_system.pu  robot2_communication_detail.pu  robot2_communication_type.pu
mainboard_fw/: README.md
mainboard_fw/mainboardv2/: Makefile
mainboard_fw/mainboardv2/App/Inc/: app.hpp  app_configure.hpp  robot2_controller.hpp  serial_printf.hpp
mainboard_fw/mainboardv2/App/Src/: app.cpp  robot2_controller.cpp  serial_printf.cpp
mainboard_fw/mainboardv2/CAN/Inc/: can2_manager.hpp  can3_manager.hpp
mainboard_fw/mainboardv2/CAN/Src/: can2_manager.cpp  can3_manager.cpp  can_data_configure.cpp
mainboard_fw/mainboardv2/LAN/Inc/: lan_peripheral.hpp  udp_data_configure.hpp  udp_data_manager.hpp
mainboard_fw/mainboardv2/LAN/Src/: lan_peripheral.cpp  udp_data_manager.cpp
mainboard_fw/mainboardv2/Led/Inc/: led.hpp
mainboard_fw/mainboardv2/Led/Src/: led.cpp
mainboard_fw/mainboardv2/Serial/Inc/: bluetooth_data_manager.hpp  serial_packetter.hpp  serial_peripheral.hpp
mainboard_fw/mainboardv2/Serial/Src/: bluetooth_data_manager.cpp  serial_packetter.cpp  serial_peripheral.cpp
mainboard_fw/mainboardv2/Wireless/Inc/: wisun_data_configure.hpp  wisun_data_manager.hpp  wisun_peripheral.hpp
mainboard_fw/mainboardv2/Wireless/Src/: wisun_data_manager.cpp  wisun_peripheral.cpp
ros2_ws/: README.md
ros2_ws/config/: htmd_can_receiver.yaml  htmd_can_sender.yaml  robot1_navi.yaml
ros2_ws/launch/: blue.launch.py  manual.launch.py  red.launch.py  robot2.launch.py
ros2_ws/src/controller/: CMakeLists.txt  package.xml
ros2_ws/src/controller/include/lib/: key_code_configure.hpp  linux_keyboard_driver.hpp  simple_udp.hpp
ros2_ws/src/controller/include/node/: operator.hpp  repeater.hpp
ros2_ws/src/controller/src/lib/: linux_keyboard_driver.cpp  simple_udp.cpp
ros2_ws/src/controller/src/node/: operator.cpp  repeater.cpp
ros2_ws/src/image/: CMakeLists.txt  package.xml
ros2_ws/src/image/include/node/: aruco_detector.hpp
ros2_ws/src/image/src/node/: aruco_detector.cpp
ros2_ws/src/main_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/main_msgs/action/: Navi.action
ros2_ws/src/main_msgs/msg/: ArucoMarkers.msg  KeyState.msg  Robot2Control.msg  ServoAngle.msg
ros2_ws/src/peripheral/: CMakeLists.txt  package.xml
ros2_ws/src/peripheral/include/config/: can_data_configure.hpp  htmd_mode.hpp  udp_data_configure.hpp
ros2_ws/src/peripheral/include/lib/: simple_udp.hpp  socket_can.hpp
ros2_ws/src/peripheral/include/node/: robot1_sensor.hpp  robot2_driver.hpp  solenoid_driver.hpp
ros2_ws/src/peripheral/src/lib/: socket_can.cpp
ros2_ws/src/peripheral/src/node/: robot1_sensor.cpp  robot2_driver.cpp  solenoid_driver.cpp
ros2_ws/src/robot1/: CMakeLists.txt  package.xml
ros2_ws/src/robot1/config/: robot1_navi.yaml  robot1_navi_bule.yaml
ros2_ws/src/robot1/include/node/: robot1_auto.hpp  robot1_core.hpp  robot1_key.hpp  robot1_navi.hpp
ros2_ws/src/robot1/src/node/: robot1_auto.cpp  robot1_core.cpp  robot1_key.cpp  robot1_nav1.cpp  robot1_navi.cpp
ros2_ws/src/robot2/: CMakeLists.txt  package.xml
ros2_ws/src/robot2/include/node/: robot2_common.hpp
ros2_ws/src/robot2/src/node/: ijkl.cpp  tfgh.cpp
stm32g431k8t6/: Makefile
stm32g431k8t6/App/Inc/: app.hpp  serial_printf.hpp
stm32g431k8t6/App/Src/: app.cpp  serial_printf.cpp
stm32g431k8t6/Led/Inc/: led.hpp
stm32g431k8t6/Led/Src/: led.cpp
wisun/: CMakeLists.txt  simple_udp.cpp  simple_udp.hpp  udp_data_configure.hpp  wisun_tx.cpp  wisun_tx.hpp
