<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot2</name>
  <version>0.0.0</version>
  <description>This is the control package for Robot 2 of the 2024 NHK National College of Technology Robocon Industrial Technology Arakawa B Team.</description>
  <maintainer>GN10</maintainer>
  <license></license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>main_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>htmd_manager_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
